--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -4,14 +4,25 @@
     border-radius: 5px;
     background-color: $main-color;
     border: none;
-    color: #fff;
+    color: #ffffff;
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
     &_main {
+        margin-top: 67px;
         width: 300px;
         height: 50px;
         font-size: 16px;
-        margin-top: 67px;
+    }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        font-size: 16px;
+        color: #ffffff;
+    }
+    &_mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
     }
 }
