--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -2,33 +2,33 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    &_logo {
+    &__logo {
         width: 250px;
         img {
             width: 100%;
         }
     }
-    &_official {
-        color: #fff;
+    &__official {
+        color: #ffffff;
         font-size: 12px;
         font-weight: 500;
         text-align: center;
         span {
-            font-size: 18px;
             display: block;
+            font-size: 18px;
         }
     }
-    &_phone {
-        color: #fff;
+    &__phone {
+        display: block;
+        color: #ffffff;
         font-size: 18px;
         font-weight: 700;
-        display: block;
         &:hover {
-        color: #fff;
-        text-decoration: none;
+            color: #fff;
+            text-decoration: none;
         }
     }
-    &_contacts {
+    &__contacts {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
