--- a/sass/blocks/_promo.scss
+++ b/sass/blocks/_promo.scss
@@ -1,54 +1,55 @@
 .promo {
     min-height: 650px;
     padding: 21px 0 93px 0;
-    background: url('../../img/main.jpg') center (center/cover) no-repeat;
-    &_wrapper {
+    background: url(../img/main.jpg) center (center/cover) no-repeat;
+    &__wrapper {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
         margin-top: 90px;
     }
-    &_header {
-        color: #fff;
+    &__header {
+        color: #ffffff;
         font-size: 42px;
         font-weight: 700;
         text-transform: uppercase;
+        line-height: 42px;
     }
-    &_subheader {
-        color: #fff;
-        font-size: 24px;
-        text-transform: uppercase;
-        font-weight: 500;
-        line-height: 24px;
+    &__subheader {
         margin-top: 17px;
+        color: #ffffff;
+        font-size: 24px;
+        line-height: 24px;
+        font-weight: 500;
+        text-transform: uppercase;
     }
-    &_icons {
+    &__icons {
         margin-top: 65px;
         width: 425px;
         display: flex;
         justify-content: space-between;
     }
-    &_icon {
+    &__icon {
         width: 108px;
         text-align: center;
-        color: #fff;
+        color: #ffffff;
         font-size: 14px;
         font-weight: 500;
         img {
             display: block;
             margin: 0 auto;
-            margin-bottom: 20px;  
+            margin-bottom: 20px;
         }
     }
-    &_link {
-        color: #fff;
+    &__link {
+        color: #ffffff;
         font-size: 16px;
         font-weight: 500;
         margin-top: 18px;
         a {
-            text-decoration: underline;
+            color: #ffffff;
             text-transform: uppercase;
-            color: #fff;
+            text-decoration: underline;
         }
     }
 }
